--- a/_output.yml
+++ b/_output.yml
@@ -1,5 +1,7 @@
 bookdown::gitbook:
   number_sections: no
+  split_bib: FALSE
+  split_by: none
   config:
     download: null
 bookdown::pdf_document2:
